--- a/assets/style.css
+++ b/assets/style.css
@@ -74,6 +74,7 @@ body {
 .main-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     padding: 10px;
 }
@@ -98,8 +99,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: space-between;
+    justify-content: space-between;
+    align-items: space-evenly;
     width: 80%;
     padding: 10px;
 }
@@ -108,8 +109,56 @@ body {
 }
 .my-work {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
+    align-items: space-evenly;
+    object-fit: contain;
+    /* justify-content: center; */
+    /* align-items: space-evenly;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
+
+.my-work-images {
+    display: inline-flex;
+    flex-direction: row;
+    /* justify-content: center; */
+    /* align-items: space-evenly; */
+    
+    
+}
+
+.my-work img {
+    object-fit: contain;
+    min-width: 30%;
+    max-width: 30%;
+    max-height:fit-content;
+}
+
+
+
+/* .my-work-images img {
+    object-fit: contain;
+    width: 10%;
+} */
+.first-image {
+    width: 200%;
+
+}
+
+
+.second-image {
+    object-fit: contain;
+    width: 100%;
+}
+.third-image {
+    object-fit: contain;
+    width: 100%;
+}
+.fourth-image {
+    object-fit: contain;
+    width: 100%;
+} */
 .contact {
 
 }
