--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,7 @@ body {
    
 }
 
+
 .navigation ul {
     position: absolute;
     top: 10%;
@@ -112,7 +113,7 @@ body {
 .my-work-images {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     flex: 1 1 0;
     width:fit-content;
 }
