--- a/assets/style.css
+++ b/assets/style.css
@@ -67,27 +67,50 @@ body {
 
 .main-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
     padding: 10px;
+    width: 100%;
 }
 
 .container {
     display: flex;
-    order: -1;
     flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: flex-start;
+    /* align-items: center; */
     /* align-items: space-between; */
-    border-right: groove lightblue 5px;
-    align: left;
-    width: 20%;
+   
+    width: 100%;
+    height: 150px;
+
     padding: 10px;
+    /* position: relative; */
 }
 
 .container h2 {
+    /* position: relative; */
     font-size: 200%;
+    border-right: groove lightblue 5px;
+    padding-right: 5%;
+    width: 20%;
+    height: 150px;
+}
+
+div > p {
+    /* font styling */
+    padding-left: 2%;
+    padding-top: 2%;
+}
+
+.container img {
+    position: relative;
+    box-sizing: border-box;
+    /* object-fit:fill; */
+    padding: 10px;
+    width: 100px;
+    object-fit: contain;
 }
 
 .content-container {
@@ -100,41 +123,7 @@ body {
     width: 80%;
     padding: 10px;
 }
-.about-me {
 
-}
-.my-work {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
-}
-
-.my-work-images {
-    display: flex;
-    flex-direction: row;
-    /* flex-wrap: wrap; */
-    flex: 1 1 0;
-    width:fit-content;
-}
-
-.my-work img {
-    box-sizing: border-box;
-    object-fit: contain;
-    min-width: 30%;
-    max-width: 100%;
-    padding: 5px;
-    /* max-height:fit-content; */
-}
-
-.first-image {
-    width: 200%;
-
-}
-
-.contact {
-
-}
 footer {
 
 }
