--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,8 @@
 :root {
-    /* add color scheme here */
+    --background-color:  #B6CDBD;
+    --background-color2: #fff8f0;
+    --text-background: #97a19c;
+    --border-color: #778979;
 }
 * {
     box-sizing: border-box;
@@ -12,57 +15,41 @@ body {
 }
 
 .header {
-    display: flex;
-    position: relative;
-    /* text-align: center; */
-    border-bottom: groove lightblue 5px;
+    background-color: var(--background-color);
+    border-bottom: groove var(--border-color) 5px;
 }
 
 .header-text {
-    text-shadow: 4px 4px 4px darkgray;
+    text-shadow: 4px 4px 4px var(--text-background);
     font-size: 200%;
-    color: white;
-    position:absolute;
-    top: 10%;
-    left: 10%;
+    color: var(--background-color2);
+    background-color: var(--border-color);
+    padding: 15px;
+    width: 20%;
+    height: 20%;
 }
 
-.header-image {
-    height: 200px;
-    width: 100%;
-    background-image: url(assets/images/background-header.jpeg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-   
+.header p {
+    background-color: var(--border-color);
+    color: var(--background-color2);
+    padding: 15px;
+    text-align: right;
+    width: 20%;
+    margin-left: 80%;
+    text-shadow: 2px 2px 2px var(--text-background);
 }
 
 
 .navigation ul {
-    position: absolute;
-    top: 10%;
-    left: 65%;
-    padding: 2%;
     list-style-type: none;
-    display: inline-flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    /* margin: 2%; */
-    justify-content: space-between;
-    border: 50px whitesmoke;
+    text-align: center;
 }
 
 .navigation a {
-    text-shadow: 4px 4px 4px darkgray;
+    text-shadow: 4px 4px 4px var(--text-background);
     font-weight: bolder;
     text-decoration: none;
-    white-space: nowrap;
-    color: white;
-    display: inline-flex;
-    flex-direction: row;
-    /* margin: 2%; */
-    padding: 10px;
-    justify-content: flex-end;
+    color: var(--background-color2);
 }
 
 .main-container {
@@ -72,6 +59,8 @@ body {
     justify-content: space-between;
     padding: 10px;
     width: 100%;
+    height: 100%;
+    background-color: var(--background-color2)
 }
 
 .container {
@@ -90,12 +79,11 @@ body {
 }
 
 .container h2 {
-    /* position: relative; */
     font-size: 200%;
-    border-right: groove lightblue 5px;
+    border-right: groove var(--border-color) 5px;
     padding-right: 5%;
     width: 20%;
-    height: 150px;
+    height: 100%;
 }
 
 div > p {
@@ -107,7 +95,6 @@ div > p {
 .container img {
     position: relative;
     box-sizing: border-box;
-    /* object-fit:fill; */
     padding: 10px;
     width: 100px;
     object-fit: contain;
@@ -124,6 +111,10 @@ div > p {
     padding: 10px;
 }
 
-footer {
-
+.footer {
+    background-color: var(--background-color);
+    text-align: center;
+    border-top: groove var(--border-color) 5px;
+    text-shadow: 2px 2px 2px var(--text-background);
+    color: var(--background-color2);
 }
