--- a/assets/style.css
+++ b/assets/style.css
@@ -78,10 +78,11 @@ body {
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 10px;
+    /* padding: 10px; */
     width: 100%;
     height: 100%;
-    background-color: var(--background-color2)
+    background-color: var(--background-color2);
+    margin-left: -1%;
 }
 
 .container {
