--- a/assets/style.css
+++ b/assets/style.css
@@ -12,6 +12,8 @@ body {
     flex-direction: column;
     font-family: sans-serif;
     margin: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .header {
@@ -94,7 +96,7 @@ body {
     /* align-items: space-between; */
    
     width: 100%;
-    height: 150px;
+    height: auto;
 
     padding: 10px;
     /* position: relative; */
@@ -124,30 +126,63 @@ body {
 .container img {
     box-sizing: border-box;
     /* padding: 10px; */
-    width: 200px;
-    object-fit: contain;
+    /* width: 200px;
+    object-fit: contain; */
     border: groove var(--border-color) 5px;
     border-radius: 5px;
 }
 
-.my-work-images {
+.images-box {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    padding-left: 2%;
+    row-gap: 15px;
+    /* align-items: center;
+    justify-content: center; */
+
+    height: auto;
+    /* border: dashed black 3px; */
+    object-fit: fill;
+    width: 75%;
+    padding: 15px;
+
 }
 
-.content-container {
-    display: flex;
-    order: 1;
-    flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: space-evenly;
-    width: 80%;
-    padding: 10px;
+
+
+.first-image {
+    width: 100%;
+    height: 100px;
+    min-width: 0;
+    padding: 5px;
+    position: relative;
+    /* flex: 2 1 200px; */
+
 }
 
+.other-image {
+    width: auto;
+    height: auto;
+    min-width: 0;
+    padding: 5px;
+    position: relative;
+    /* flex: 1 0 200px; */
+}
+
+.image-title {
+    position: absolute;
+    top: 20%;
+    text-shadow: 4px 4px 4px var(--text-background);
+    color: var(--background-color2);
+    background-color: var(--border-color);
+    padding: 15px;
+    /* margin-right: 10%; */
+    /* width: 20%;
+    height: 20%; */
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    border: groove var(--border-color) 5px;
+    border-left: none;
+}
 .footer {
     background-color: var(--background-color);
     text-align: center;
