added ::after pseudo element to add arrows to image title

--- a/assets/style.css
+++ b/assets/style.css
@@ -195,6 +195,10 @@ body {
     border: groove var(--border-color) 5px;
     border-left: none;
 }
+
+.image-title::after {
+    content: " »";
+}
 .footer {
     background-color: var(--background-color);
     text-align: center;
