added contact links and emojis, formatted contact ul

--- a/assets/style.css
+++ b/assets/style.css
@@ -125,6 +125,9 @@ body {
     /* font styling */
     padding-left: 2%;
     padding-top: 2%;
+    font-size: 20px;
+    font-family: sans-serif;
+    color: darkslategray;
 }
 
 .container img {
@@ -199,6 +202,50 @@ body {
 .image-title::after {
     content: " »";
 }
+
+.container ul {
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    padding-left: 2%;
+    padding-top: 2%;
+}
+
+.contact-me-links {
+    display: inline-flex;
+    justify-content: space-evenly;
+    font-size: 25px;
+    font-family: sans-serif;
+    color: darkslategray;
+}
+
+.contact-me-links a:link {
+    color: darkslategray;
+    text-decoration: none;
+}
+
+.contact-me-links a:hover {
+    color: #e38150;
+    text-decoration: none;
+}
+
+.contact-me-links a:visited {
+    color: #b6cdbd;
+    text-decoration: none;
+}
+
+#email a::after {
+    content: " ✉️"
+}
+
+#linkedin a::after {
+    content: " 🧑‍💼"
+}
+
+#github a::after {
+    content: " 👩‍💻"
+}
+
 .footer {
     background-color: var(--background-color);
     text-align: center;
