--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,7 @@ body {
 }
 
 .header h2 {
+    font-size: 125%;
     background-color: var(--border-color);
     color: var(--background-color2);
     padding: 15px;
@@ -128,7 +129,9 @@ body {
     font-size: 20px;
     font-family: sans-serif;
     color: darkslategray;
+    width: 60%;
 }
+
 
 .container img {
     box-sizing: border-box;
@@ -144,6 +147,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     row-gap: 15px;
+    margin-top: 2%;
     /* align-items: center;
     justify-content: center; */
 
