--- a/assets/style.css
+++ b/assets/style.css
@@ -14,6 +14,7 @@ body {
     margin: 0;
     width: 100%;
     height: 100%;
+    background-color: var(--background-color2);
 }
 
 .header {
@@ -64,18 +65,22 @@ body {
 
 
 .navigation ul {
+    display: inline-flex;
+    justify-content: space-evenly;
     list-style-type: none;
-    text-align: center;
+    width: 100%;
 }
 
 .navigation a {
-    text-shadow: 4px 4px 4px var(--text-background);
+    text-shadow: 6px 6px 4px var(--text-background);
     font-weight: bolder;
     font-size: 30px;
     text-decoration: none;
     color: var(--background-color2);
 }
-
+.nav-links {
+    display: inline-flex;
+}
 .navigation a:hover {
     color: #e38150;
 }
@@ -224,9 +229,11 @@ body {
 .contact-me-links {
     display: inline-flex;
     justify-content: space-evenly;
-    font-size: 25px;
     font-family: sans-serif;
     color: darkslategray;
+    text-shadow: 6px 6px 4px var(--text-background);
+    font-weight: bolder;
+    font-size: 30px;
 }
 
 .contact-me-links a:link {
@@ -265,4 +272,5 @@ body {
     text-shadow: 2px 2px 2px var(--text-background);
     color: var(--background-color2);
     font-weight: bolder;
+    font-size: 200%;
 }
