--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,13 @@
 :root {
     --background-color:  #B6CDBD;
-    --background-color2: #fff8f0;
-    --text-background: #97a19c;
-    --border-color: #778979;
+    --offwhite: #fff8f0;
+    --dark-green: #778979;
+    --border: groove #778979 5px;
+    --hover-color: #e38150;
+    --dark-gray: darkslategray;
+    --small-text-shadow: 2px 2px 2px #97a19c;
+    --med-text-shadow: 4px 4px 4px #97a19c;
+    --large-text-shadow: 6px 6px 4px #97a19c;
 }
 * {
     box-sizing: border-box;
@@ -14,52 +19,49 @@ body {
     margin: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--background-color2);
+    background-color: var(--offwhite);
 }
 
 .header {
     background-color: var(--background-color);
-    border-bottom: groove var(--border-color) 5px;
+    border-bottom: var(--border);
     position: relative;
 }
 
 .header-text {
-    text-shadow: 4px 4px 4px var(--text-background);
+    text-shadow: var(--med-text-shadow);
     font-size: 200%;
-    color: var(--background-color2);
-    background-color: var(--border-color);
+    color: var(--offwhite);
+    background-color: var(--dark-green);
     padding: 15px;
     width: 20%;
     height: 20%;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    border: groove var(--border-color) 5px;
+    border: var(--border);
     border-left: none;
 }
 
 .header h2 {
     font-size: 125%;
-    background-color: var(--border-color);
-    color: var(--background-color2);
+    background-color: var(--dark-green);
+    color: var(--offwhite);
     padding: 15px;
     text-align: right;
     width: 20%;
     margin-left: 80%;
-    text-shadow: 2px 2px 2px var(--text-background);
+    text-shadow: var(--small-text-shadow);
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
-    border: groove var(--border-color) 5px;
+    border: var(--border);
     border-right: none;
 }
 
 .header-image {
     position:absolute;
-    /* height: 150px;
-    width: 150px; */
     top: 2%;
-    left: 45.5%;
-    /* right: 46%; */
-    border: groove var(--border-color) 5px;
+    left: 45%;
+    border: var(--border);
     border-radius: 10px;
 }
 
@@ -72,17 +74,17 @@ body {
 }
 
 .navigation a {
-    text-shadow: 6px 6px 4px var(--text-background);
+    text-shadow: var(--large-text-shadow);
     font-weight: bolder;
     font-size: 30px;
     text-decoration: none;
-    color: var(--background-color2);
+    color: var(--offwhite);
 }
 .nav-links {
     display: inline-flex;
 }
 .navigation a:hover {
-    color: #e38150;
+    color: var(--hover-color);
 }
 
 .main-container {
@@ -90,10 +92,9 @@ body {
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-between;
-    /* padding: 10px; */
     width: 100%;
     height: 100%;
-    background-color: var(--background-color2);
+    background-color: var(--offwhite);
     margin-left: -1%;
 }
 
@@ -102,48 +103,39 @@ body {
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: flex-start;
-    /* align-items: center; */
-    /* align-items: space-between; */
-   
     width: 100%;
     height: auto;
-
     padding: 10px;
-    /* position: relative; */
 }
 
 .container h3 {
-    text-shadow: 4px 4px 4px var(--text-background);
+    text-shadow: var(--med-text-shadow);
     font-size: 200%;
-    color: var(--background-color2);
-    background-color: var(--border-color);
+    color: var(--offwhite);
+    background-color: var(--dark-green);
     padding: 15px;
     margin-right: 10px;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    border: groove var(--border-color) 5px;
+    border: var(--border);
     border-left: none;
     width: 20%;
     height: 100%;
 }
 
 .container p {
-    /* font styling */
     padding-left: 2%;
     padding-top: 2%;
     font-size: 20px;
     font-family: sans-serif;
-    color: darkslategray;
+    color: var(--dark-gray);
     width: 60%;
 }
 
 
 .container img {
     box-sizing: border-box;
-    /* padding: 10px; */
-    /* width: 200px;
-    object-fit: contain; */
-    border: groove var(--border-color) 5px;
+    border: var(--border);
     border-radius: 5px;
 }
 
@@ -153,15 +145,10 @@ body {
     flex-wrap: wrap;
     row-gap: 15px;
     margin-top: 2%;
-    /* align-items: center;
-    justify-content: center; */
-
     height: auto;
-    /* border: dashed black 3px; */
     object-fit: fill;
     width: 75%;
     padding: 15px;
-
 }
 
 
@@ -172,9 +159,8 @@ body {
     min-width: 0;
     padding: 5px;
     position: relative;
-    /* flex: 2 1 200px; */
-
 }
+
 .first-image:hover {
     filter: grayscale(100%);
 }
@@ -189,28 +175,24 @@ body {
     min-width: 0;
     padding: 5px;
     position: relative;
-    /* flex: 1 0 200px; */
 }
 
 .image-title {
     position: absolute;
     top: 20%;
-    text-shadow: 4px 4px 4px var(--text-background);
-    color: var(--background-color2);
-    background-color: var(--border-color);
+    text-shadow: var(--med-text-shadow);
+    color: var(--offwhite);
+    background-color: var(--dark-green);
     padding: 15px;
-    /* margin-right: 10%; */
-    /* width: 20%;
-    height: 20%; */
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    border: groove var(--border-color) 5px;
+    border: var(--border);
     border-left: none;
 }
 
 .image-title h3 {
-    text-shadow: 4px 4px 4px var(--text-background);
-    color: var(--background-color2);
+    text-shadow: var(--med-text-shadow);
+    color: var(--offwhite);
     font-size: 50%;
 }
 
@@ -230,24 +212,24 @@ body {
     display: inline-flex;
     justify-content: space-evenly;
     font-family: sans-serif;
-    color: darkslategray;
-    text-shadow: 6px 6px 4px var(--text-background);
+    color: var(--dark-gray);
+    text-shadow: var(--large-text-shadow);
     font-weight: bolder;
     font-size: 30px;
 }
 
 .contact-me-links a:link {
-    color: darkslategray;
+    color: var(--dark-gray);
     text-decoration: none;
 }
 
 .contact-me-links a:visited {
     text-decoration: none;
-    color: darkslategray;
+    color: var(--dark-gray);
 }
 
 .contact-me-links a:hover {
-    color: #e38150;
+    color: var(--hover-color);
     text-decoration: none;
 }
 
@@ -268,9 +250,9 @@ body {
 .footer {
     background-color: var(--background-color);
     text-align: center;
-    border-top: groove var(--border-color) 5px;
-    text-shadow: 2px 2px 2px var(--text-background);
-    color: var(--background-color2);
+    border-top: var(--border);
+    text-shadow: var(--small-text-shadow);
+    color: var(--offwhite);
     font-weight: bolder;
     font-size: 200%;
 }
