--- a/assets/style.css
+++ b/assets/style.css
@@ -30,11 +30,11 @@ body {
 
 .header-text {
     text-shadow: var(--med-text-shadow);
-    font-size: 200%;
+    font-size: 300%;
     color: var(--offwhite);
     background-color: var(--dark-green);
     padding: 15px;
-    width: 20%;
+    width: 30%;
     height: 20%;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
@@ -43,13 +43,13 @@ body {
 }
 
 .header h2 {
-    font-size: 125%;
+    font-size: 150%;
     background-color: var(--dark-green);
     color: var(--offwhite);
     padding: 15px;
     text-align: right;
-    width: 20%;
-    margin-left: 80%;
+    width: 30%;
+    margin-left: 70%;
     text-shadow: var(--small-text-shadow);
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
@@ -161,13 +161,6 @@ body {
     position: relative;
 }
 
-.first-image:hover {
-    filter: grayscale(100%);
-}
-.other-image:hover {
-    filter: grayscale(100%);
-}
-
 
 .other-image {
     width: auto;
@@ -175,6 +168,13 @@ body {
     min-width: 0;
     padding: 5px;
     position: relative;
+}
+
+.first-image:hover {
+    filter: grayscale(100%);
+}
+.other-image:hover {
+    filter: grayscale(100%);
 }
 
 .image-title {
@@ -256,3 +256,163 @@ body {
     font-weight: bolder;
     font-size: 200%;
 }
+
+.featured-image2 {
+    display: none;
+}
+  
+  /* larger smartphones or small tablets */
+  @media screen and (max-width: 768px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .header {
+        display: flex;
+        flex-direction: column;
+    }
+    .header-text {
+        font-size: 125%;
+    }
+    .header h2 {
+        margin: 0;
+        border-top-right-radius: 20px;
+        border-bottom-right-radius: 20px;
+        border-left: none;
+        border-right: var(--border);
+        border-top-left-radius: 0px;
+        border-bottom-left-radius: 0px;
+    }
+    .header-image {
+        position:absolute;
+        top: 5%;
+        left: 35%;
+        border: var(--border);
+        border-radius: 10px;
+    }
+    .navigation ul {
+        display: inline-flex;
+        /* flex-direction: column; */
+        justify-content: space-around;
+        flex-wrap: wrap;
+        row-gap: 2px;
+        list-style-type: none;
+        width: 75%;
+    }
+
+    .navigation a {
+        font-size: 25px;
+    }
+    .container p {
+        font-size: 18px;
+        line-height: 1.5;
+        width: 100%;
+    }
+    .container h3 {
+        font-size: 125%;
+        width: 50%;
+    }
+    .images-box {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        width: 75%;
+    }
+    .featured-image1 {
+        display: none;
+    }
+    .featured-image2 {
+        display: block;
+        width: auto;
+        height: auto;
+    }
+    .container ul {
+        display: flex;
+        flex-direction: column;
+        width: 75%;
+        align-items: flex-start;
+    }
+    .footer {
+        text-align: left;
+        padding-left: 15px;
+    }
+  
+    }
+  
+  /* Smaller smartphones */
+  @media screen and (max-width: 576px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .header {
+        display: flex;
+        flex-direction: column;
+    }
+   
+    .header h2 {
+        margin: 0;
+        font-size: 100%;
+        border-top-right-radius: 20px;
+        border-bottom-right-radius: 20px;
+        border-left: none;
+        border-right: var(--border);
+        border-top-left-radius: 0px;
+        border-bottom-left-radius: 0px;
+    }
+    .header-image {
+        position:absolute;
+        top: 5%;
+        left: 40%;
+        border: var(--border);
+        border-radius: 10px;
+    }
+    .navigation ul {
+        display: flex;
+        flex-direction: column;
+        /* justify-content: center; */
+        align-items: center;
+        flex-wrap: wrap;
+        row-gap: 2px;
+        list-style-type: none;
+        width: 100%;
+    }
+    .navigation a {
+        font-size: 25px;
+    }
+    .container p {
+        font-size: 17px;
+        line-height: 2;
+    }
+    .container h3 {
+        font-size: 125%;
+        width: 75%;
+    }
+    .images-box {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        padding: 1px;
+    }
+    .featured-image1 {
+        display: none;
+    }
+    .featured-image2 {
+        display: block;
+        width: auto;
+        height: auto;
+    }
+    .container ul {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        align-items: flex-start;
+    }
+    .footer {
+        text-align: left;
+        padding-left: 15px;
+    }
+  
+    }
